# DocScripts

./: .gitignore  Cargo.toml  Create Trade.user.js  Docs View Trades.user.js  Find War.user.js  Hide Nation Descriptions.user.js  LICENSE  Makefile  README.md  View Trades.user.js  build.ts  bundle.ts  compile.ts  deno.json  deno.jsonc  imports.ts  jsx.tsx  main.ts  rustfmt.toml  test.ts  types.ts  utils.ts
.github/workflows/: build.yaml  cargo_update.yaml  deploy.yaml  lint.yaml
Baseball/: Away Games.user.js  Home Games.user.js  Human.user.js  Play Baseball.user.js  README.md  Team Building.user.js
Commendation/: Commendation.user.js  README.md
Espionage Report/: Client.user.js  README.md  Server.js
Find War/: Client.user.js  README.md  Server.js
Global/: README.md  aSyncly.user.js
Hide Descriptions/: Hide Alliance Descriptions.user.js  Hide Nation Descriptions.user.js  README.md
Keno/: README.md
Message/: README.md  Send Message.user.js
Reward-Ads/: README.md  Reward-Ads.user.js
Trading/: Create Trade.user.js  Quick Scroll.user.js  README.md  View Trades.user.js
docs/: CNAME  ads.txt  index.html
docs/css/: main.css
docs/js/: main.js
docs/scripts/: CityManager.user.js  CreateTrade.user.js  HideAllianceDescriptions.user.js  HideNationDescriptions.user.js  Military.user.js  Nations.user.js  PlayBaseball.user.js  SendMessage.user.js  (+1 more)
src/: CityManager.ts  CityManager.tsx  CreateTrade.ts  CreateTrade.tsx  Military.ts  Nations.ts  Nations.tsx
static/: CNAME  index.html
trade/: Cargo.toml  prefix.ts
trade/src/: main.rs
ts/: main.ts  main.tsx
(+17 files in other folders)
